--- a/submitted.html
+++ b/submitted.html
@@ -4,7 +4,7 @@
 	<title>Form Submitted</title>
 </head>
 <body>
-	<h1> Your form is submitted successfully ! </h1>
+	<h1> Your form is submitted successfully ! Thanks </h1>
 	<p> click here to go to form <a href="form.html"> Submission Page </a></p>
 </body>
 </html>
